--- a/src/styles.css
+++ b/src/styles.css
@@ -28,7 +28,7 @@ h3{
  p {
    font-size: 15px;
    line-height: 18px;
-   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+   font-family:Cambria, Cochin, Georgia, Times, Times New Roman, serif
    text-align: center;
    margin: 0px auto;
  }
