--- a/src/styles.css
+++ b/src/styles.css
@@ -7,14 +7,15 @@ body {
 }
 h1 {
   color: #4a2c2c;
-  text-align: left;
-  font-size: 16em;
+  text-align: center;
+  font-size: 5vw;
   margin-top: 0;
+  vertical-align: bottom;
 }
 h2 {
   text-align: center;
   color: #773838;
-  font-size: 2em;
+  font-size: 2vw;
 }
 img,
 #sourceLink {
@@ -22,6 +23,10 @@ img,
   margin: 0 auto;
   border-radius: 14px;
   max-width: 70%;
+}
+#icon {
+  vertical-align: top;
+  width: 12vw;
 }
 h3 {
   text-align: left;
@@ -41,8 +46,17 @@ p {
   margin: 0 auto;
   padding: 20px;
 }
+.temperature {
+  color: #773838;
+  font-size: 7.5vw;
+  text-align: right;
+}
 #city-name {
-  font-size: 300%;
+  font-size: 7vw;
+  text-align: left;
+  padding-right: 0.1em;
+  font-weight: bolder;
+  color: #4a2c2c;
 }
 .week-forecast {
   margin-top: 20px;
@@ -58,4 +72,12 @@ p {
 }
 .week-forecast-temp-min {
   opacity: 0.5;
+}
+.cell {
+  font-size: 2vw;
+  margin: 0;
+}
+.feels-like {
+  margin-left: 2.5vw;
+  text-align: right;
 }
