Added responsive text style in week forecast

--- a/src/styles.css
+++ b/src/styles.css
@@ -64,7 +64,7 @@ p {
   color: #4a2c2c;
 }
 .week-forecast-date {
-  font-size: 16px;
+  font-size: 3.5vw;
   opacity: 0.5;
 }
 .week-forecast-temps {
