--- a/src/styles.css
+++ b/src/styles.css
@@ -68,7 +68,7 @@ p {
   opacity: 0.7;
 }
 .week-forecast-temps {
-  font-size: 13px;
+  font-size: 1vw;
 }
 .week-forecast-temp-min {
   opacity: 0.6;
